# StarAge

./: .gitignore  README.md  Star Age: Engineering the Evolutionary Dial That Controls Human Lifespan.md  pyproject.toml  starrage-sim
.github/workflows/: release-readiness.yml
configs/: ci_science_smoke.json  default_optimistic.yaml  extended_precision_longrun.yaml  local_pareto_scan.yaml  local_pareto_scan_hh35_rr060.yaml  local_pareto_scan_hh35_rr060_fast.yaml  post_upgrade_long_eval.yaml  sensitivity_conservative.yaml  validation_fixed_grid_5x5_full.yaml  validation_preregistered_A1p57_C0p155.yaml  validation_preregistered_A1p588_C0p15725.yaml  washout_assay_stress_test.yaml
reports/: release_readiness_science_layer.md
reports/extended_full/: condition_summary.csv  dose_summary.csv  metrics_summary.json  tranche1_gate.json  washout_summary.csv
reports/focus_best_viable/: condition_summary.csv  dose_summary.csv  metrics_summary.json  tranche1_gate.json  washout_summary.csv
reports/focus_high_mutation/: condition_summary.csv  dose_summary.csv  metrics_summary.json  tranche1_gate.json  washout_summary.csv
reports/local_pareto_scan/: condition_summary.csv  dose_summary.csv  metrics_summary.json  tranche1_gate.json  washout_summary.csv
src/starrage_sim/: config.py  (+4 more)
tests/: science_utils.py  test_dynamics.py  test_gating.py  test_integration.py  test_profiles.py  test_reproducibility.py  test_science_calibration.py  test_science_claims_and_compare.py  test_science_data_modes.py  test_science_golden_artifacts.py  test_science_run_integration.py  test_washout.py
(+117 files in other folders)
