[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starrage-sim"
version = "0.1.0"
description = "Tranche 1 verification simulator for Star Age assumptions"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "StarAge" }]
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
science = [
  "PyYAML>=6.0",
  "pymc>=5.10",
  "arviz>=0.17",
  "matplotlib>=3.8",
]
full = [
  "PyYAML>=6.0",
  "matplotlib>=3.8",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
starrage-sim = "starrage_sim.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
